assets/css/style.css
@import url(http://fonts.googleapis.com/css?family=Lato:300,400|Lobster+Two);

body {
	background-color: #F88379;
	font-family: 'Lato', Arial, sans-serif;
	font-weight: 300;
	color: #FFF;
	width: 100%;
	margin: 0;
}

.standout {
	font-weight: 400;
}

#wrapper {
	max-width: 1000px;
	margin: 0 auto;
}

a:link {text-decoration:none; color: #7f7f7f;}
a:visited {text-decoration:none; color:#7f7f7f;}
a:hover {text-decoration:none; color:#666;}

h3, h4, h5 {
	margin: .33em 0;
}


section h2 {
	font-family: 'Lobster Two', cursive;
	font-weight:400;
	font-size:2.25em;
	color: #FFF;
}

.clearfix:after {
	content: "";
	display: table;
	clear: both;
}


.textwrap {
	max-width: 1000px;
	margin: 0 auto;
}

header {
	margin: 0 auto;
	max-width: 800px;
	text-align:center;
	display:table;
	height: 65vh;
}

header h1 {
	font-family: 'Lobster Two', cursive;
	font-weight:400;
	color: #FFF;
	font-size: 5.5em;
	display: table-cell;
	text-align:left;
	vertical-align: middle;
}

nav {
	display:none;
}

/*Scrolling Nav*/

a[ id= "section1" ]:target ~ #section1 {
    -webkit-transform: translateY( 0px);
    transform: translateY( 0px );
}

a[ id= "contact" ]:target ~ #contactform {
    display:block;
    -webkit-transform: translateY( -500px );
    transform: translateY( -500px );
}
a[ id= "section2" ]:target ~ #section2 {
    -webkit-transform: translateY( -1000px );
    transform: translateY( -1000px );
}

.octopus {
	background: url('../img/octo-blue.png') no-repeat;
	width: 203px;
	height: 177px;
	float:right;
	display: inline-block;
	margin: -100px 20% 0 0;
}

/* About */
#section1 {
	background-color: #7DCFB6;
	padding: 15px;
}

.sociallinks {
	display: inline-block;
	margin: 1em 0;
}

#section1 .fa-stack-1x {
	color: #7DCFB6;
}

#section1 a:link {color: #FFF;}
#section1 a:visited {color: #FFF;}
#section1 a:hover {color: #FFF;}

/* Contact Form */
#contactform {
    margin: 0 auto;
	font-size: 1.5em;
	width: 65%;
}

form {
	display:none;
    padding: 20px;
	margin: 5%;
	border: 3px solid #FFF;
	border-radius: 25px;
}

label {
	display: inline-block;
	font-size: .83em;
	width: 19%;
	vertical-align: top;
}

input {
	width: 80%;
	border: none;
	border-radius: 25px;
	outline:none;
	color: #999;
	font-size: .83em;
	padding: .33em;
	margin: .25em 0;
	box-sizing: border-box;
}

textarea {
	width: 80%;
	outline: none;
	border-radius: 25px;
	border: none;
	color: #999;
	font-size: .83em;
	padding: .5em;
	margin: .25em 0;
	box-sizing: border-box;
}

#section1 button {
	border: none;
	border-radius: 25px;
	outline:none;
	font-size: .83em;
	background-color: #FFF;
	border: 2px solid #FFF;
}

#section1 button:hover {
	background-color: #7DCFB6;
	color:#FFF;
	border: 2px solid #FFF;
	cursor:pointer;
}

.contactme {
	display: block;
	font-family: 'Lobster Two', cursive;
	color: #7f7f7f;
	margin: 0 auto;
	min-width: 15%;
}

.actions {
	margin-left: 20%;
	width: 80%;
}

.actions button {
	display:inline;
	margin: 0 auto;
	width: 49%;
}


/* Resume */
#section2 {
	background-color: #00B2CA;
	padding: 15px;
	overflow: hidden;
	display: flex;
}

.section-header {
	display: block;
}

.section-header h2 {
	display: inline-block;
	float:left;
}

.printme {
	background-color: #FFF;
	margin: .83em .25em;
	float:right;
	padding: .5em;
	border: 3px solid #FFF;
	border-radius: 50%;
	height: 2em;
	width: 2em;
	text-align:center;
	line-height: 1;
	font-family: 'Lobster Two', cursive;
	font-weight: 100;
	font-size: 1em;
}


#section2 article {
    box-sizing: border-box;
    width: 70%;
    margin-right: 2em;
	float:left;
}

#section2 aside {
	box-sizing: border-box;
    width: 25%;
	float:left;
}

.resume > ul > li {
	list-style: none;
	margin: 1.5em .5em;
}

.resume li li {
    padding: .33em;
}

/* Colophon */
#section3 {
	background-color: #1D4E89;
	padding: 15px;
}

